<resources>
    <string name="app_name">IMN</string>
    <string name="app_fullname">Instant MMLS Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="password">Password</string>
    <string name="id">Student ID</string>
    <string name="login">Store credentials</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nologin">No credentials yet</string>

    <!-- PREFERENCES STRING -->
    <string name="pref_settinglabel">Settings Page</string>
    <string name="pref_title_system_setting_page">System Settings</string>
    <string name="pref_title_user_setting_page">User Preferences</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_summr_system_sync_settings">Set the frequency of syncing with MMLS</string>
    <string name="pref_title_system_clr_settings">System clear settings</string>
    <string name="pref_summr_system_clr_settings">Set the frequency of clearing cached posts</string>
    <string name="pref_title_system_notify_settings">Notifications</string>
    <string name="pref_summr_system_notify_settings">Toggle notifications</string>
    <string name="pref_title_user_id">MMLS Student ID</string>
    <string name="pref_summr_user_id">Your MMLS student ID goes here!</string>
    <string name="pref_title_user_pw">MMLS password</string>
    <string name="pref_summr_user_pw">Your MMLS password goes here. Do not worry, it is safe!</string>

    <string name="update_frequency">Check for update every </string>
    <string name="clear_frequency">Clear posts exceeding </string>

</resources>
